btn alignment fix

--- a/src/components.css
+++ b/src/components.css
@@ -1932,7 +1932,7 @@ textarea:focus {
     cursor: pointer;
     padding-left: 1.4rem;
     text-align: left;
-    color: #333;
+    color: inherit;
     display: block;
 }
 .form-field > .checkbox-label > .input-checkbox {
@@ -2015,7 +2015,7 @@ textarea:focus {
     margin-left: 0.3rem;
 }
 .form-field small {
-    color: var(--dark-grey);
+    color: var(--secondary-color);
 }
 .form-field
     > .radio-label
